report(css): use padding for better score gauge spacing (#6972)

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -788,7 +788,7 @@
 
 .lh-scores-header .lh-gauge__wrapper,
 .lh-scores-header .lh-gauge--pwa__wrapper {
-  margin: 0 4px;
+  padding: 0 4px;
 }
 
 .lh-scores-header .lh-gauge--pwa__wrapper {
