--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -84,7 +84,7 @@
 
   --pass-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>check</title><path fill="%23178239" d="M24 4C12.95 4 4 12.95 4 24c0 11.04 8.95 20 20 20 11.04 0 20-8.96 20-20 0-11.05-8.96-20-20-20zm-4 30L10 24l2.83-2.83L20 28.34l15.17-15.17L38 16 20 34z"/></svg>');
   --average-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>info</title><path fill="%23E67700" d="M24 4C12.95 4 4 12.95 4 24s8.95 20 20 20 20-8.95 20-20S35.05 4 24 4zm2 30h-4V22h4v12zm0-16h-4v-4h4v4z"/></svg>');
-  --fail-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>warn</title><path fill="%23C7221F" d="M2 42h44L24 4 2 42zm24-6h-4v-4h4v4zm0-8h-4v-8h4v8z"/></svg>');
+  --fail-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>fail</title><path fill="%23C7221F" d="M2 42h44L24 4 2 42zm24-6h-4v-4h4v4zm0-8h-4v-8h4v8z"/></svg>');
 
   --content-paste-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path fill="%235E6268" d="M19 2h-4.18C14.4.84 13.3 0 12 0c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm7 18H5V4h2v3h10V4h2v16z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
   --av-timer-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="%235E6268"><path d="M0 0h24v24H0z" fill="none"/><path d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42A8.962 8.962 0 0 0 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9a8.994 8.994 0 0 0 7.03-14.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"/></svg>');
@@ -233,7 +233,20 @@
     border-radius: 2px;
 }
 
+.lh-letter-node {
+  display: flex;
+  background-color: darkgray;
+  height: fit-content;
+  color: white;
+  text-shadow: 0 1px black;
+  padding: 5px;
+}
+
 /* Score */
+
+.lh-audit__score-icons {
+  display: flex;
+}
 
 .lh-audit__score-icon {
   margin-left: var(--lh-score-margin);
@@ -245,21 +258,21 @@
 .lh-audit--pass .lh-audit__display-text {
   color: var(--pass-color);
 }
-.lh-audit--pass .lh-audit__score-icon {
+.lh-audit--pass.lh-audit__score-icon {
   background-image: var(--pass-icon-url);
 }
 
 .lh-audit--average .lh-audit__display-text {
   color: var(--average-color);
 }
-.lh-audit--average .lh-audit__score-icon {
+.lh-audit--average.lh-audit__score-icon {
   background-image: var(--average-icon-url);
 }
 
 .lh-audit--fail .lh-audit__display-text {
   color: var(--fail-color);
 }
-.lh-audit--fail .lh-audit__score-icon {
+.lh-audit--fail.lh-audit__score-icon {
   background-image: var(--fail-icon-url);
 }
 
@@ -267,11 +280,11 @@
   color: var(--display-value-gray);
 }
 
-.lh-audit--informative .lh-audit__score-icon,
-.lh-audit--manual .lh-audit__score-icon {
+.lh-audit--informative.lh-audit__score-icon,
+.lh-audit--manual.lh-audit__score-icon {
   visibility: hidden;
 }
-.lh-audit--error .lh-audit__score-icon {
+.lh-audit--error.lh-audit__score-icon {
   display: none;
 }
 
@@ -597,6 +610,14 @@
   vertical-align: middle;
 }
 
+.lh-clump--changed > summary .lh-audit-group__header::before {
+  content: '';
+  background-image: var(--fail-icon-url);
+}
+.lh-clump--failed > summary .lh-audit-group__header::before {
+  content: '';
+  background-image: var(--fail-icon-url);
+}
 .lh-clump--warning > summary .lh-audit-group__header::before {
   content: '';
   background-image: var(--warning-icon-url);
