--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -435,6 +435,8 @@
 
 .lh-metric__value {
   white-space: nowrap; /* No wrapping between metric value and the icon */
+  width: 90px;
+  text-align: right;
 }
 
 
