hacks for making it look cool

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -531,6 +531,7 @@
   padding: 0 var(--expandable-indent);
   /* smaller gap between metrics and filmstrip */
   margin: -8px auto 0 auto;
+  margin-left: -310px;
 }
 
 .lh-filmstrip {
@@ -547,8 +548,8 @@
 
 .lh-filmstrip__thumbnail {
   border: 1px solid var(--report-secondary-border-color);
-  max-height: 100px;
-  max-width: 60px;
+  /* max-height: 100px;
+  max-width: 60px; */
 }
 
 @media screen and (max-width: 750px) {
@@ -846,7 +847,7 @@
 
 .lh-categories {
   width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .lh-category {
