unsticky for now

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -771,8 +771,10 @@
 /* Report */
 
 .lh-header-sticky {
-  position: -webkit-sticky;
-  position: sticky;
+  /** TODO: Redesigned report has a small sticky header.
+  For now, disable the current sticky behavior. */
+  /* position: -webkit-sticky;
+  position: sticky; */
   top: 0;
   width: 100%;
   min-width: var(--report-min-width);
