--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -923,7 +923,7 @@
   border-bottom: 1px solid var(--color-black-200);
 }
 
-.lh-category:first-of-type .lh-category-wrapper {
+.lh-category-wrapper:first-of-type {
   border-top: 1px solid var(--color-black-200);
 }
 
