--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -109,6 +109,8 @@
   --score-title-line-height-big: 36px;
   --score-title-line-height: 26px;
   --section-padding: 40px;
+  --shape-margin: 7px 12px 0 4px;
+  --shape-size: 12px;
   --topbar-padding: 0 8px;
 
   --pass-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>check</title><path fill="%23178239" d="M24 4C12.95 4 4 12.95 4 24c0 11.04 8.95 20 20 20 11.04 0 20-8.96 20-20 0-11.05-8.96-20-20-20zm-4 30L10 24l2.83-2.83L20 28.34l15.17-15.17L38 16 20 34z"/></svg>');
@@ -150,6 +152,8 @@
     --score-title-line-height-big: 26px;
     --score-title-line-height: 20px;
     --section-padding: 24px;
+    --shape-margin: 5px 12px 0 2px;
+    --shape-size: 10px;
     --topbar-height: 32px;
   }
 
@@ -322,17 +326,17 @@
 /* Score */
 
 .lh-audit__score-icon {
-  margin-left: var(--lh-score-margin);
-  width: var(--lh-score-icon-width);
-  height: var(--lh-score-icon-width);
-  background: none no-repeat center center / contain;
+  width: var(--shape-size);
+  height: var(--shape-size);
+  margin: var(--shape-margin);
 }
 
 .lh-audit--pass .lh-audit__display-text {
   color: var(--pass-color);
 }
 .lh-audit--pass .lh-audit__score-icon {
-  background-image: var(--pass-icon-url);
+  border-radius: 100%;
+  background: var(--color-green);
 }
 
 .lh-audit--average .lh-audit__display-text {
@@ -346,17 +350,10 @@
   color: var(--fail-color);
 }
 .lh-audit--fail .lh-audit__score-icon {
-  background-image: var(--fail-icon-url);
+  clip-path: polygon(50% 0, 100% 100%, 0% 100%);
+  background: var(--color-red);
 }
 
-.lh-audit--informative .lh-audit__display-text {
-  color: var(--display-value-gray);
-}
-
-.lh-audit--informative .lh-audit__score-icon,
-.lh-audit--manual .lh-audit__score-icon {
-  visibility: hidden;
-}
 .lh-audit--error .lh-audit__score-icon {
   display: none;
 }
@@ -376,7 +373,6 @@
 .lh-audit__index,
 .lh-audit__title,
 .lh-audit__display-text,
-.lh-audit__score-icon,
 .lh-load-opportunity__sparkline,
 .lh-chevron-container {
   margin: 0 var(--audit-item-gap);
@@ -664,14 +660,6 @@
   margin: var(--lh-audit-group-vpadding) 0;
 }
 
-.lh-audit-group__header {
-  font-size: var(--subheader-font-size);
-  line-height: var(--subheader-line-height);
-  color: var(--subheader-color);
-  flex: 1;
-  font-weight: bold;
-}
-
 .lh-audit-group__header::before {
   /* By default, groups don't get an icon */
   content: none;
@@ -757,27 +745,36 @@
   margin-bottom: var(--section-padding);
 }
 
-.lh-audit-group__itemcount {
-  color: var(--display-value-gray);
-  margin: 3px 10px 0;
+.lh-audit-group__caption {
+  flex: 1;
 }
-.lh-audit-group__summary .lh-chevron {
+
+.lh-audit-group__itemcount {
+  color: var(--color-black-600);
+  font-weight: bold;
+}
+.lh-audit-group__header .lh-chevron {
   margin-top: calc((var(--body-line-height) - 5px) / 2);
 }
 
-.lh-audit-group__description {
+.lh-audit-group__header {
   font-size: var(--body-font-size);
-  color: var(--medium-75-gray);
   margin: 0 0 var(--lh-audit-group-vpadding);
+  font-weight: bold;
 }
 
-.lh-clump > .lh-audit-group__description,
-.lh-audit-group--diagnostics .lh-audit-group__description,
-.lh-audit-group--load-opportunities .lh-audit-group__description,
-.lh-audit-group--metrics .lh-audit-group__description,
-.lh-audit-group--pwa-fast-reliable .lh-audit-group__description,
-.lh-audit-group--pwa-installable .lh-audit-group__description,
-.lh-audit-group--pwa-optimized .lh-audit-group__description {
+.lh-audit-group__header span {
+  font-weight: 400;
+  color: var(--color-black-600);
+}
+
+.lh-clump > .lh-audit-group__header,
+.lh-audit-group--diagnostics .lh-audit-group__header,
+.lh-audit-group--load-opportunities .lh-audit-group__header,
+.lh-audit-group--metrics .lh-audit-group__header,
+.lh-audit-group--pwa-fast-reliable .lh-audit-group__header,
+.lh-audit-group--pwa-installable .lh-audit-group__header,
+.lh-audit-group--pwa-optimized .lh-audit-group__header {
   margin-top: var(--lh-audit-group-vpadding);
 }
 
