--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -332,8 +332,9 @@
 }
 
 .lh-audit--pass .lh-audit__display-text {
-  color: var(--pass-color);
+  color: var(--color-green);
 }
+.lh-metric--pass .lh-metric__innerwrap::before,
 .lh-audit--pass .lh-audit__score-icon {
   border-radius: 100%;
   background: var(--color-green);
@@ -346,9 +347,11 @@
   background-image: var(--average-icon-url);
 }
 
+.lh-metric--fail .lh-metric__value,
 .lh-audit--fail .lh-audit__display-text {
-  color: var(--fail-color);
+  color: var(--color-red);
 }
+.lh-metric--fail .lh-metric__innerwrap::before,
 .lh-audit--fail .lh-audit__score-icon {
   clip-path: polygon(50% 0, 100% 100%, 0% 100%);
   background: var(--color-red);
@@ -473,10 +476,7 @@
 }
 
 .lh-metric__title {
-  font-size: var(--body-font-size);
-  line-height: var(--body-line-height);
-  display: flex;
-  white-space: nowrap;
+  flex: 1;
 }
 
 .lh-metric__name {
@@ -499,17 +499,15 @@
 }
 
 
-.lh-metric .lh-metric__value::after {
+.lh-metric .lh-metric__innerwrap::before {
   content: '';
-  width: var(--lh-score-icon-width);
-  height: var(--lh-score-icon-width);
-  background-size: contain;
+  width: var(--shape-size);
+  height: var(--shape-size);
   display: inline-block;
-  vertical-align: text-bottom;
-  margin-left: calc(var(--body-font-size) / 2);
+  margin: var(--shape-margin);
 }
 
-.lh-metric--pass .lh-metric__value {
+/* .lh-metric--pass .lh-metric__value {
   color: var(--pass-color);
 }
 .lh-metric--pass .lh-metric__value::after {
@@ -523,15 +521,15 @@
 }
 .lh-metric--average .lh-metric__value::after {
   background: var(--average-icon-url) no-repeat 50% 50%;
-}
+} */
 
 
-.lh-metric--fail .lh-metric__value {
+/* .lh-metric--fail .lh-metric__value {
   color: var(--fail-color);
 }
 .lh-metric--fail .lh-metric__value::after {
   background: var(--fail-icon-url) no-repeat 50% 50%;
-}
+} */
 
 .lh-metric--error .lh-metric__value,
 .lh-metric--error .lh-metric__description {
