--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -112,7 +112,8 @@
   --shape-margin: 7px 12px 0 4px;
   --shape-size: 12px;
   --topbar-padding: 0 8px;
-  --triangle-polygon: polygon(50% 0, 100% 100%, 0% 100%);
+  --polygon-triangle: polygon(50% 0, 100% 100%, 0% 100%);
+  --polygon-square: polygon(6% 6%, 94% 6%, 94% 94%, 6% 94%);
 
   --pass-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>check</title><path fill="%23178239" d="M24 4C12.95 4 4 12.95 4 24c0 11.04 8.95 20 20 20 11.04 0 20-8.96 20-20 0-11.05-8.96-20-20-20zm-4 30L10 24l2.83-2.83L20 28.34l15.17-15.17L38 16 20 34z"/></svg>');
   --average-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>info</title><path fill="%23E67700" d="M24 4C12.95 4 4 12.95 4 24s8.95 20 20 20 20-8.95 20-20S35.05 4 24 4zm2 30h-4V22h4v12zm0-16h-4v-4h4v4z"/></svg>');
@@ -341,17 +342,18 @@
 }
 
 .lh-audit--average .lh-audit__display-text {
-  color: var(--average-color);
+  color: var(--color-orange);
 }
 .lh-audit--average .lh-audit__score-icon {
-  background-image: var(--average-icon-url);
+  background: var(--color-orange);
+  clip-path: var(--polygon-square);
 }
 
 .lh-audit--fail .lh-audit__display-text {
   color: var(--color-red);
 }
 .lh-audit--fail .lh-audit__score-icon {
-  clip-path: var(--triangle-polygon);
+  clip-path: var(--polygon-triangle);
   background: var(--color-red);
 }
 
@@ -515,18 +517,17 @@
 
 .lh-metric--average .lh-metric__value {
   color: var(--color-orange);
-  padding-left: 16px;
 }
 .lh-metric--average .lh-metric__innerwrap::before {
-  background: var(--average-icon-url) no-repeat 50% 50%;
+  background: var(--color-orange);
+  clip-path: var(--polygon-square);
 }
-
 
 .lh-metric--fail .lh-metric__value {
   color: var(--color-red);
 }
 .lh-metric--fail .lh-metric__innerwrap::before {
-  clip-path: var(--triangle-polygon);
+  clip-path: var(--polygon-triangle);
   background: var(--color-red);
 }
 
