--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -215,6 +215,7 @@
 
 .lh-root * {
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
 }
 
 .lh-root {
@@ -329,7 +330,7 @@
 }
 
 .lh-audit--pass .lh-audit__display-text {
-  color: var(--color-green);
+  color: var(--color-green-700);
 }
 .lh-audit--pass .lh-audit__score-icon {
   border-radius: 100%;
@@ -337,7 +338,7 @@
 }
 
 .lh-audit--average .lh-audit__display-text {
-  color: var(--color-orange);
+  color: var(--color-orange-700);
 }
 .lh-audit--average .lh-audit__score-icon {
   background: var(--color-orange);
@@ -345,7 +346,7 @@
 }
 
 .lh-audit--fail .lh-audit__display-text {
-  color: var(--color-red);
+  color: var(--color-red-700);
 }
 .lh-audit--fail .lh-audit__score-icon {
   clip-path: var(--polygon-triangle);
@@ -354,7 +355,7 @@
 
 .lh-audit--manual .lh-audit__display-text,
 .lh-audit--notapplicable .lh-audit__display-text {
-  color: var(--color-black-400);
+  color: var(--color-black-600);
 }
 .lh-audit--manual .lh-audit__score-icon,
 .lh-audit--notapplicable .lh-audit__score-icon {
@@ -464,6 +465,7 @@
 .lh-metric__innerwrap {
   display: flex;
   justify-content: space-between;
+  font-weight: 500;
   padding: 8px var(--text-indent);
 }
 
@@ -504,7 +506,7 @@
 }
 
 .lh-metric--pass .lh-metric__value {
-  color: var(--color-green);
+  color: var(--color-green-700);
 }
 .lh-metric--pass .lh-metric__innerwrap::before {
   border-radius: 100%;
@@ -512,7 +514,7 @@
 }
 
 .lh-metric--average .lh-metric__value {
-  color: var(--color-orange);
+  color: var(--color-orange-700);
 }
 .lh-metric--average .lh-metric__innerwrap::before {
   background: var(--color-orange);
@@ -520,7 +522,7 @@
 }
 
 .lh-metric--fail .lh-metric__value {
-  color: var(--color-red);
+  color: var(--color-red-700);
 }
 .lh-metric--fail .lh-metric__innerwrap::before {
   clip-path: var(--polygon-triangle);
@@ -529,7 +531,7 @@
 
 .lh-metric--error .lh-metric__value,
 .lh-metric--error .lh-metric__description {
-  color: var(--color-red);
+  color: var(--color-red-700);
 }
 
 /* Hide icon if there was an error */
@@ -974,7 +976,6 @@
   transition: transform 0.3s, opacity 0.3s;
   transform: translateY(100px);
   opacity: 0;
-  -webkit-font-smoothing: antialiased;
   bottom: 0;
   left: 0;
   z-index: 3;
