--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -85,6 +85,7 @@
   /* TODO(cjamcl) clean up unused variables. */
   --circle-size-big: 120px;
   --circle-size: 96px;
+  --circle-size-mini: 30px;
   --color-black-100: #F5F5F5;
   --color-black-200: #E0E0E0;
   --color-black-400: #BDBDBD;
@@ -775,15 +776,12 @@
 /* Report */
 
 .lh-header-sticky {
-  /** TODO: Redesigned report has a small sticky header.
-  For now, disable the current sticky behavior. */
-  /* position: -webkit-sticky;
-  position: sticky; */
-  top: 0;
-  width: 100%;
-  min-width: var(--report-min-width);
+  max-width: var(--report-width);
   z-index: 2;
   will-change: transform;
+  position: relative;
+  height: 360px;  /* todo find right number and set it the right way */
+  margin: 0 auto;
 }
 .lh-header-plain {
   margin-top: var(--section-padding);
@@ -794,9 +792,7 @@
 }
 
 .lh-header-container {
-  display: block;
-  margin: 0 auto;
-  position: relative;
+  position: absolute;
   word-wrap: break-word;
 }
 
